--- a/html/agregar2.html
+++ b/html/agregar2.html
@@ -89,6 +89,18 @@
           <td><a href="./popupe.html">Eliminar</a></td>
           <td><a href="./modificar.html">Modificar</a></td>
         </tr>
+        <tr>
+          <td class="nombre">Cristobal</td>
+          <td>12345678</td>
+          <td>Santiago</td>
+          <td>1000</td>
+          <td>1000</td>
+          <td>1000</td>
+          <td>1000</td>
+          <td>1000</td>
+          <td><a href="./popupe.html">Eliminar</a></td>
+          <td><a href="./modificar.html">Modificar</a></td>
+        </tr>
     </table>
     <br><br>
     <a class="botones" href="./agregar.html">Agregar</a>
