--- a/html/agregar.html
+++ b/html/agregar.html
@@ -20,7 +20,7 @@
         <a href="./Login.html">Cerrar Sesion</a>
       </div>
    </div>
-   <form id="addform" method="get" action="./Mantenedor.html">
+   <form id="addform" method="get" action="./agregar2.html">
       <div id="second">
         <div style="margin: 12px;">
             <select name="select" class="filtro">
@@ -53,7 +53,7 @@
           <td>0</td>
           <td>0</td>
           <td><a href="./popupe.html">Eliminar</a></td>
-          <td><a href="./popupm.html">Modificar</a></td>
+          <td><a href="./modificar.html">Modificar</a></td>
         </tr>
         <tr>
           <td>Diego Chacana</td>
@@ -65,7 +65,7 @@
           <td>0</td>
           <td>0</td>
           <td><a href="./popupe.html">Eliminar</a></td>
-          <td><a href="./popupm.html">Modificar</a></td>
+          <td><a href="./modificar.html">Modificar</a></td>
         </tr>
         <tr>
           <td>Ricardo Salas</td>
@@ -77,7 +77,7 @@
           <td>0</td>
           <td>0</td>
           <td><a href="./popupe.html">Eliminar</a></td>
-          <td><a href="./popupm.html">Modificar</a></td>
+          <td><a href="./modificar.html">Modificar</a></td>
         </tr>
         <tr>
           <td>Patricio Ogaz</td>
@@ -89,17 +89,17 @@
           <td>0</td>
           <td>0</td>
           <td><a href="./popupe.html">Eliminar</a></td>
-          <td><a href="./popupm.html">Modificar</a></td>
+          <td><a href="./modificar.html">Modificar</a></td>
         </tr>
         <tr>
-            <td><input class="filtro2" id="nombre" name="nombre"></td>
-            <td><input class="filtro2" type="number" name="telefono" id="telefono"></td>
-            <td><input class="filtro2" name="direccion" id="direccion"></td>
-            <td><input class="filtro2" type="number" name="sueldobruto" id="sueldobruto"></td>
-            <td><input class="filtro2" type="number" name="prevision" id="prevision"></td>
-            <td><input class="filtro2" type="number" name="imposiciones" id="imposiciones"></td>
-            <td><input class="filtro2" type="number" name="bonotransporte" id="bonotransporte"></td>
-            <td><input class="filtro2" type="number" name="bonosadc" id="bonosadc"></td>
+            <td><input class="agregar" id="nombre" name="nombre"></td>
+            <td><input class="agregar" type="number" name="telefono" id="telefono"></td>
+            <td><input class="agregar" name="direccion" id="direccion"></td>
+            <td><input class="agregar" type="number" name="sueldobruto" id="sueldobruto"></td>
+            <td><input class="agregar" type="number" name="prevision" id="prevision"></td>
+            <td><input class="agregar" type="number" name="imposiciones" id="imposiciones"></td>
+            <td><input class="agregar" type="number" name="bonotransporte" id="bonotransporte"></td>
+            <td><input class="agregar" type="number" name="bonoadc" id="bonoadc"></td>
             <td><input class="botonadd" id="ingresar" type="submit" value="Confirmar"></td>
             <td></td>
         </tr>
