--- a/html/Mantenedor.html
+++ b/html/Mantenedor.html
@@ -7,8 +7,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/Mantenedor.css'>
     <link rel="stylesheet" href="./css/Mantenedor.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src='./js/mantenedor.js'></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.js"></script>
 </head>
 <body style="background-image: url(./img/fondo-login.jpg);background-size: 100%;">
  <div id="wrapper">
@@ -50,7 +51,7 @@
           <td>0</td>
           <td>0</td>
           <td>0</td>
-          <td><a href="./popupe.html">Eliminar</a></td>
+          <td><a href="./cuenta.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
           <td><a href="./modificar.html">Modificar</a></td>
         </tr>
         <tr>
