Trabajo Chacana precentacion 1

--- a/html/Mantenedor.html
+++ b/html/Mantenedor.html
@@ -90,6 +90,34 @@
           <td><a href="./popupm.html">Modificar</a></td>
         </tr>
     </table>
+    <br>
+    <h3>AGREGAR EMPLEADO</h3>
+    <form class="form-group" id="agregarform" method="get" action="./Mantenedor.html">
+    <table>
+      <tr>
+        <th><label for="nombreAG" class="controles">Nombre</label></th>
+        <th><label for="telefonoAG">Telefono</label></th>
+        <th><label for="direccionAG">Direccion</label></th>
+        <th><label for="sueldoAG">Sueldo Bruto</label></th>
+        <th><label for="previcionAG">Previcion</label></th>
+        <th><label for="imposicionesAG">Imposiciones</label></th>
+        <th><label for="transporteAG">Bono Transporte</label></th>
+        <th><label for="bonosAG">Bonos adicionales</label></th>
+        <th></th> 
+      </tr>
+      <tr>
+        <td><input style="width: 50px;" class="control" id="nombreAG" name="nombreAG" ></td>
+        <td><input class="control" id="telefonoAG" name="telefonoAG" minlength="8"></td>
+        <td><input class="control" id="direccionAG" name="direccionAG" ></td>
+        <td><input class="control" id="sueldoAG" name="sueldoAG" ></td>
+        <td><input class="control" id="previcionAG" name="previcionAG" ></td>
+        <td><input class="control" id="imposicionesAG" name="imposicionesAG" ></td>
+        <td><input class="control" id="transporteAG" name="transporteAG" ></td>
+        <td><input class="control" id="bonosAG" name="bonosAG" ></td>
+        <td></td>
+      </tr>
+    </table>
+  </form>
   </div>   
 </body>
 </html>
