jquery e interfaz lista

--- a/html/cuenta.html
+++ b/html/cuenta.html
@@ -36,7 +36,7 @@
                 <td>di.chacana@alumnos.duoc.cl</td>
                 <td>9 4948 4814</td>
                 <td>Administrador</td>
-                <td><a href="./datos.html" style="color: rgb(235, 245, 91);">Modificar</a></td>
+                <td><a href="./datos.html">Modificar</a></td>
 
               </tr>
             </div>      
