--- a/html/modificar.html
+++ b/html/modificar.html
@@ -20,7 +20,7 @@
         <a href="./Login.html">Cerrar Sesion</a>
       </div>
    </div>
-   <form id="addform" method="get" action="./agregar2.html">
+   <form id="addform" method="get" action="./Mantenedor.html">
       <div id="second">
         <div style="margin: 12px;">
             <select name="select" class="filtro">
