--- a/html/cuenta.html
+++ b/html/cuenta.html
@@ -23,7 +23,7 @@
 
          <table style="margin-left: 150px; margin-top: 100px; width: 75%; height: 200px;">
             <tr>
-                <th>Nombre de usuario actual</th>
+                <th>Nombre Completo</th>
                 <th>Contraseña actual</th>
                 <th>Correo electronico</th>
                 <th>Celular/telefono</th>
@@ -31,7 +31,7 @@
                 <th ></th>
               </tr>
               <tr>
-                <td class="nombre">dichacana</td>
+                <td class="nombre">Diego Chacana</td>
                 <td>*************</td>
                 <td>di.chacana@alumnos.duoc.cl</td>
                 <td>9 4948 4814</td>
