--- a/html/datos.html
+++ b/html/datos.html
@@ -15,14 +15,14 @@
     <section class="formulario-login">
         <form class="form-group" id="cuentaform" method="get" action="./cuenta.html">
                 <h4>Modificar datos</h4>
-                <label for="usuario">Usuario nuevo</label>
-                <input class="controles" id="usuario" name="usuario" placeholder="Ingrese nuevo usuario">
+                <label for="nombreC">Nombre completo</label>
+                <input class="controles" id="nombreC" name="nombreC" placeholder="Ingrese nuevo nombre y apellido">
                 <br>
                 <label for="contraseñaC">Contraseña nueva</label>
                 <input class="controles" type="password" name="contraseñaC" id="contraseñaC" minlength="6" placeholder="Ingrese su Contraseña nueva">
                 <br>
                 <label for="telefono">Telefono nuevo</label>
-                <input class="controles" id="telefono" name="telefono" minlength="8" placeholder="Ingrese nuevo telefono">
+                <input class="controles" id="telefono" type="number" name="telefono" placeholder="Ingrese nuevo telefono">
                 <input class="botones" type="submit" value="Modificar">
                 <button class="botones"><a href="./cuenta.html">Regresar</a></button>
         </form>
