--- a/html/eliminar.html
+++ b/html/eliminar.html
@@ -51,8 +51,8 @@
           <td>0</td>
           <td>0</td>
           <td>0</td>
-          <td><a href="./popupe.html">Eliminar</a></td>
-          <td><a href="./modificar.html">Modificar</a></td>
+          <td><a href="./eliminar1-2.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
+          <td><a href="./modificar2.html">Modificar</a></td>
         </tr>
         <tr>
           <td>Ricardo Salas</td>
@@ -63,7 +63,7 @@
           <td>0</td>
           <td>0</td>
           <td>0</td>
-          <td><a href="./popupe.html">Eliminar</a></td>
+          <td><a href="./eliminar3-1.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
           <td><a href="./modificar.html">Modificar</a></td>
         </tr>
         <tr>
@@ -75,7 +75,7 @@
           <td>0</td>
           <td>0</td>
           <td>0</td>
-          <td><a href="./popupe.html">Eliminar</a></td>
+          <td><a href="./eliminar4-1html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
           <td><a href="./modificar.html">Modificar</a></td>
         </tr>
     </table>
