--- a/html/eliminar2-3-4.html
+++ b/html/eliminar2-3-4.html
@@ -51,44 +51,8 @@
           <td>0</td>
           <td>0</td>
           <td>0</td>
-          <td><a href="./eliminar.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
+          <td><a href="./eliminar1-2-3-4.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
           <td><a href="./modificar.html">Modificar</a></td>
-        </tr>
-        <tr>
-          <td>Diego Chacana</td>
-          <td>949484814</td>
-          <td>Chile,Santiago,Quilicura</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td><a href="./eliminar2.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
-          <td><a href="./modificar2.html">Modificar</a></td>
-        </tr>
-        <tr>
-          <td>Ricardo Salas</td>
-          <td>985475462</td>
-          <td>Chile,Santiago,Desconocido</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td><a href="./eliminar3.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
-          <td><a href="./modificar3.html">Modificar</a></td>
-        </tr>
-        <tr>
-          <td>Patricio Ogaz</td>
-          <td>985674521</td>
-          <td>Chile,Santiago,Desconocido</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td><a href="./eliminar4.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
-          <td><a href="./modificar4.html">Modificar</a></td>
         </tr>
     </table>
     <br><br>
