--- a/html/eliminar4-2.html
+++ b/html/eliminar4-2.html
@@ -20,7 +20,6 @@
         <a href="./Login.html">Cerrar Sesion</a>
       </div>
    </div>
-   <form id="addform" method="get" action="./Mantenedor.html">
       <div id="second">
         <div style="margin: 12px;">
             <select name="select" class="filtro">
@@ -44,28 +43,16 @@
           <th colspan="2">Accion</th>
         </tr>
         <tr>
-            <td><input style="width: 120px;" class="agregar" id="nombre" name="nombre" placeholder="Kevin del rio"></td>
-            <td><input class="agregar" type="number" name="telefono" id="telefono" placeholder="988987646"></td>
-            <td><input class="agregar" name="direccion" id="direccion" placeholder="Chile,Santiago,Quilicura"></td>
-            <td><input class="agregar" type="number" name="sueldobruto" id="sueldobruto" placeholder="0"></td>
-            <td><input class="agregar" type="number" name="prevision" id="prevision" placeholder="0"></td>
-            <td><input class="agregar" type="number" name="imposiciones" id="imposiciones" placeholder="0"></td>
-            <td><input class="agregar" type="number" name="bonotransporte" id="bonotransporte" placeholder="0"></td>
-            <td><input class="agregar" type="number" name="bonoadc" id="bonoadc" placeholder="0"></td>
-            <td><input class="botonadd" id="ingresar" type="submit" value="Confirmar"></td>
-            <td></td>
-        </tr>
-        <tr>
-          <td>Diego Chacana</td>
-          <td>949484814</td>
+          <td class="nombre">Kevin del rio</td>
+          <td>988987646</td>
           <td>Chile,Santiago,Quilicura</td>
           <td>0</td>
           <td>0</td>
           <td>0</td>
           <td>0</td>
           <td>0</td>
-          <td><a href="./eliminar2.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
-          <td><a href="./modificar2.html">Modificar</a></td>
+          <td><a href="./eliminar3-1-4.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
+          <td><a href="./modificar.html">Modificar</a></td>
         </tr>
         <tr>
           <td>Ricardo Salas</td>
@@ -76,26 +63,12 @@
           <td>0</td>
           <td>0</td>
           <td>0</td>
-          <td><a href="./eliminar3.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
-          <td><a href="./modificar3.html">Modificar</a></td>
-        </tr>
-        <tr>
-          <td>Patricio Ogaz</td>
-          <td>985674521</td>
-          <td>Chile,Santiago,Desconocido</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td><a href="./eliminar4.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
-          <td><a href="./modificar4.html">Modificar</a></td>
+          <td><a href="./eliminar2-3-4.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
+          <td><a href="./modificar.html">Modificar</a></td>
         </tr>
     </table>
     <br><br>
     <a class="botones" href="./agregar.html">Agregar</a>
-  </div> 
-</form>  
-<script src='./js/modificar.js'></script>   
+  </div>   
 </body>
 </html>
