--- a/html/modificar2.html
+++ b/html/modificar2.html
@@ -44,29 +44,29 @@
           <th colspan="2">Accion</th>
         </tr>
         <tr>
-            <td><input style="width: 120px;" class="agregar" id="nombre" name="nombre" placeholder="Kevin del rio"></td>
-            <td><input class="agregar" type="number" name="telefono" id="telefono" placeholder="988987646"></td>
-            <td><input class="agregar" name="direccion" id="direccion" placeholder="Chile,Santiago,Quilicura"></td>
-            <td><input class="agregar" type="number" name="sueldobruto" id="sueldobruto" placeholder="0"></td>
-            <td><input class="agregar" type="number" name="prevision" id="prevision" placeholder="0"></td>
-            <td><input class="agregar" type="number" name="imposiciones" id="imposiciones" placeholder="0"></td>
-            <td><input class="agregar" type="number" name="bonotransporte" id="bonotransporte" placeholder="0"></td>
-            <td><input class="agregar" type="number" name="bonoadc" id="bonoadc" placeholder="0"></td>
-            <td><input class="botonadd" id="ingresar" type="submit" value="Confirmar"></td>
-            <td></td>
-        </tr>
-        <tr>
-          <td>Diego Chacana</td>
-          <td>949484814</td>
+          <td class="nombre">Kevin del rio</td>
+          <td>988987646</td>
           <td>Chile,Santiago,Quilicura</td>
           <td>0</td>
           <td>0</td>
           <td>0</td>
           <td>0</td>
           <td>0</td>
-          <td><a href="./eliminar2.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
-          <td><a href="./modificar2.html">Modificar</a></td>
+          <td><a href="./eliminar.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
+          <td><a href="./modificar.html">Modificar</a></td>
         </tr>
+        <tr>
+          <td><input style="width: 120px;" class="agregar" id="nombre" name="nombre" placeholder="Diego Chacana"></td>
+          <td><input class="agregar" type="number" name="telefono" id="telefono" placeholder="949484814"></td>
+          <td><input class="agregar" name="direccion" id="direccion" placeholder="Chile,Santiago,Quilicura"></td>
+          <td><input class="agregar" type="number" name="sueldobruto" id="sueldobruto" placeholder="0"></td>
+          <td><input class="agregar" type="number" name="prevision" id="prevision" placeholder="0"></td>
+          <td><input class="agregar" type="number" name="imposiciones" id="imposiciones" placeholder="0"></td>
+          <td><input class="agregar" type="number" name="bonotransporte" id="bonotransporte" placeholder="0"></td>
+          <td><input class="agregar" type="number" name="bonoadc" id="bonoadc" placeholder="0"></td>
+          <td><input class="botonadd" id="ingresar" type="submit" value="Confirmar"></td>
+          <td></td>
+      </tr>
         <tr>
           <td>Ricardo Salas</td>
           <td>985475462</td>
