--- a/html/modificar4.html
+++ b/html/modificar4.html
@@ -44,16 +44,16 @@
           <th colspan="2">Accion</th>
         </tr>
         <tr>
-            <td><input style="width: 120px;" class="agregar" id="nombre" name="nombre" placeholder="Kevin del rio"></td>
-            <td><input class="agregar" type="number" name="telefono" id="telefono" placeholder="988987646"></td>
-            <td><input class="agregar" name="direccion" id="direccion" placeholder="Chile,Santiago,Quilicura"></td>
-            <td><input class="agregar" type="number" name="sueldobruto" id="sueldobruto" placeholder="0"></td>
-            <td><input class="agregar" type="number" name="prevision" id="prevision" placeholder="0"></td>
-            <td><input class="agregar" type="number" name="imposiciones" id="imposiciones" placeholder="0"></td>
-            <td><input class="agregar" type="number" name="bonotransporte" id="bonotransporte" placeholder="0"></td>
-            <td><input class="agregar" type="number" name="bonoadc" id="bonoadc" placeholder="0"></td>
-            <td><input class="botonadd" id="ingresar" type="submit" value="Confirmar"></td>
-            <td></td>
+          <td class="nombre">Kevin del rio</td>
+          <td>988987646</td>
+          <td>Chile,Santiago,Quilicura</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td><a href="./eliminar.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
+          <td><a href="./modificar.html">Modificar</a></td>
         </tr>
         <tr>
           <td>Diego Chacana</td>
@@ -80,17 +80,17 @@
           <td><a href="./modificar3.html">Modificar</a></td>
         </tr>
         <tr>
-          <td>Patricio Ogaz</td>
-          <td>985674521</td>
-          <td>Chile,Santiago,Desconocido</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td><a href="./eliminar4.html" onclick="return confirm('estas seguro de eliminarlo?');">Eliminar</a></td>
-          <td><a href="./modificar4.html">Modificar</a></td>
-        </tr>
+          <td><input style="width: 120px;" class="agregar" id="nombre" name="nombre" placeholder="Patricio Ogaz"></td>
+          <td><input class="agregar" type="number" name="telefono" id="telefono" placeholder="985674521"></td>
+          <td><input class="agregar" name="direccion" id="direccion" placeholder="Chile,Santiago,Desconocido"></td>
+          <td><input class="agregar" type="number" name="sueldobruto" id="sueldobruto" placeholder="0"></td>
+          <td><input class="agregar" type="number" name="prevision" id="prevision" placeholder="0"></td>
+          <td><input class="agregar" type="number" name="imposiciones" id="imposiciones" placeholder="0"></td>
+          <td><input class="agregar" type="number" name="bonotransporte" id="bonotransporte" placeholder="0"></td>
+          <td><input class="agregar" type="number" name="bonoadc" id="bonoadc" placeholder="0"></td>
+          <td><input class="botonadd" id="ingresar" type="submit" value="Confirmar"></td>
+          <td></td>
+        <tr>
     </table>
     <br><br>
     <a class="botones" href="./agregar.html">Agregar</a>
