--- a/html/datos.html
+++ b/html/datos.html
@@ -17,13 +17,13 @@
                 <h4>Modificar datos</h4>
                 <label for="nombreC">Nombre completo</label>
                 <input class="controles" id="nombreC" name="nombreC" placeholder="Ingrese nuevo nombre y apellido">
-                <br>
+                <br><br>
                 <label for="contraseñaC">Contraseña nueva</label>
                 <input class="controles" type="password" name="contraseñaC" id="contraseñaC" minlength="6" placeholder="Ingrese su Contraseña nueva">
-                <br>
+                <br><br>
                 <label for="telefono">Telefono nuevo</label>
                 <input class="controles" id="telefono" type="number" name="telefono" placeholder="Ingrese nuevo telefono">
-                <input class="botones" type="submit" value="Modificar">
+                <input class="botones" id="Modificar" type="submit" value="Modificar">
                 <button class="botones"><a href="./cuenta.html">Regresar</a></button>
         </form>
     </section>
