--- a/TAV/tav-cuarta-rama/html/Mantenedor.html
+++ b/TAV/tav-cuarta-rama/html/Mantenedor.html
@@ -50,7 +50,7 @@
           <td>0</td>
           <td>0</td>
           <td>0</td>
-          <td><a href="./popupe.html">Eliminar</a></td>
+          <td><a href="./eliminar.html">Eliminar</a></td>
           <td><a href="./popupm.html">Modificar</a></td>
         </tr>
         <tr>
