--- a/html/Mantenedor.html
+++ b/html/Mantenedor.html
@@ -17,6 +17,7 @@
       <div class="vertical-menu">
         <a href="./cuenta.html">Perfil</a>
         <a href="./Mantenedor.html" class="active">Administrar Empleados</a>
+        <a href="./crearusuario.html">Crear usuario</a>
         <a href="./Login.html">Cerrar Sesion</a>
       </div>
    </div>
