--- a/html/cuenta.html
+++ b/html/cuenta.html
@@ -16,6 +16,7 @@
            <div class="vertical-menu">
              <a href="./cuenta.html" class = "active">Perfil</a>
              <a href="./Mantenedor.html">Administrar Empleados</a>
+             <a href="./crearusuario.html">Crear usuario</a>
              <a href="./Login.html">Cerrar Sesion</a>
            </div>
         </div>
