--- a/html/crearusuario.html
+++ b/html/crearusuario.html
@@ -37,7 +37,7 @@
                 <td><input style="width: 120px;" class="agregar" id="nombre" name="nombre" placeholder="ingrese nombre"></td>
                 <td><input class="agregar" type="password" name="contraseña" id="contraseña" placeholder="ingrese contraseña"></td>
                 <td><input class="agregar" name="correo" id="correo" placeholder="ingrese correo"></td>
-                <td><input class="agregar" name="telefono" id="telefono" placeholder="ingrese telefono"></td>
+                <td><input class="agregar" type="number" name="telefono" id="telefono" placeholder="ingrese telefono"></td>
                 <td><input class="agregar" name="tipocuenta" id="tipocuenta" placeholder="ingrese tipo cuenta"></td>
                 <td><input class="botonadd" id="ingresar" type="submit" value="Confirmar"></td>
             </tr>
