--- a/html/cuenta.html
+++ b/html/cuenta.html
@@ -22,7 +22,7 @@
         </div>
         <div > <h1 style="margin-left: 150px;"> DATOS DE LA CUENTA </h1>
 
-         <table style="margin-left: 150px; margin-top: 100px; width: 75%; height: 200px;">
+         <table style="margin-left: 100px; margin-top: 100px; width: 75%; height: 200px; margin-right: 150px;">
             <tr>
                 <th>Nombre Completo</th>
                 <th>Contraseña actual</th>
